[081] - Fix text overflow unsupported CSS

--- a/static/css/packages/index.scss
+++ b/static/css/packages/index.scss
@@ -123,6 +123,7 @@
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
+                    
 
                     @include large-screen {
                         width: 70%;
@@ -131,7 +132,8 @@
 
                     @include medium-small-screen {
                         width: 100%;
-                        height: 172px;
+                        height: 100px;
+                        // height: 172px;
                     }
                 }
 
@@ -223,7 +225,8 @@
                         margin: 0 20px 0 0;
                         max-width: 60%;
                         white-space: nowrap;
-                        overflow-x: clip;
+                        // overflow-x: clip;
+                        overflow-x: hidden;
 
                         @include large-screen {
                             font-size: 32px;
@@ -307,7 +310,8 @@
                     text-align: left;
                     color: var(--gray-color);
                     margin: 0;
-                    overflow: clip;
+                    // overflow: clip;
+                    overflow: hidden;
                     text-overflow: ellipsis;
 
                     @include large-screen {
@@ -316,6 +320,7 @@
                     }
 
                     @include medium-small-screen {
+                        overflow: hidden;
                         font-size: 16px;
                         height: 48px;
                     }
